# wraithmarked

./: .gitignore  LICENSE  README.md  README_IMPLEMENTATION.md
wraithmarked_agent/: Cargo.toml  activity_data.json  activity_data.json_20250926_110647.json
wraithmarked_agent/src/: main.rs  models.rs
wraithmarked_agent/src/models/: activity.rs  activity_window.rs  enums.rs  mod.rs  models.rs  stats.rs
wraithmarked_agent/src/services/: active_window.rs  activity_manager.rs  c2_client.rs  command_executor.rs  keystroke_tracker.rs  mod.rs  tracker_trait.rs
wraithmarked_c2/: Cargo.toml  c2_history.txt  test_all_endpoints.sh
wraithmarked_c2/src/: c2_server.rs  command_line.rs  main.rs  models.rs  tcp_stream.rs
wraithmarked_c2/src/old_src/: blocking_file_downloader.rs  file_exproler.rs  main.rs  noneblocking_file_downloader.rs  old_main.rs  tcp_stream.rs
wraithmarked_c2/tests/: quick_dev.rs
